--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gcspikelite
-Version: 1.0.1
+Version: 1.0.2
 Date: 2008/09/26
 Title: Spike-in data for GC/MS data and methods within flagme
 Author: Mark Robinson <mrobinson@wehi.edu.au>
@@ -7,4 +7,5 @@ Maintainer: Mark Robinson <mrobinson@wehi.edu.au>
 Depends: R (>= 2.5.0)
 Description: Spike-in data for GC/MS data and methods within flagme
 License: LGPL
+bioViews: ExperimentData
 Packaged: Mon Oct 27 23:29:04 2008; mrobinson
