changed biocViews to MassSpectrometryData (child of ExperimentData); also fixed typo (bioViews -> biocViews)
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/gcspikelite@1331 db2202da-8704-0410-b924-b125b3cd84ef

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,5 @@ Maintainer: Mark Robinson <mrobinson@wehi.edu.au>
 Depends: R (>= 2.5.0)
 Description: Spike-in data for GC/MS data and methods within flagme
 License: LGPL
-bioViews: ExperimentData
+biocViews: MassSpectrometryData
 Packaged: Mon Oct 27 23:29:04 2008; mrobinson
